--- a/css/xml.css
+++ b/css/xml.css
@@ -157,6 +157,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    min-height: 0;
 }
 
 .editor-content textarea {
@@ -400,6 +401,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    min-height: 0;
 }
 
 .fullscreen-content textarea {
