--- a/css/yml.css
+++ b/css/yml.css
@@ -157,6 +157,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    min-height: 0;
 }
 
 .editor-content textarea {
@@ -369,6 +370,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    min-height: 0;
 }
 
 .fullscreen-content textarea {
